src/elements/FilePondDefault/index.css
/* Default FilePond Styles */
:host {
    /* default block style */
    display: block;
    margin-top: 0.25em;
    margin-bottom: 1.25em;

    /* toggles animations */
    --animate: 1;

    /* focus outline */
    --outline: Highlight auto 1px;
    @supports (outline: -webkit-focus-ring-color auto 1px) {
        --outline: -webkit-focus-ring-color auto 1px;
    }

    /*  Default colors */
    --default-color: CanvasText;
    --default-background-color: color-mix(in srgb, CanvasText 10%, Canvas 100%);
    --default-padding: 1em;
    --default-border-radius: 1.25em;
    --default-backdrop-filter: blur(20px) saturate(1.25);
    --default-accent-color: #007aff;
    --default-border: 1px solid color-mix(in srgb, CanvasText 10%, transparent);

    /* Slot layout */
    & slot {
        position: relative;
        isolation: isolate;
    }
}

:host(:not([nodrop])) {
    padding: var(--default-padding, 0);

    & > div {
        display: flex;
        flex-direction: column;
        gap: var(--default-padding);
    }
}

/* apply "never" animation state */
:host([animations='never']) {
    --animate: 0;
}

/* gray out elements when disabled */
:host([disabled]) {
    filter: grayscale(100%);
}

file-pond-drop-area {
    --border-radius: var(--default-border-radius);
    --border: var(--default-border);
}

file-pond-drop-indicator {
    --border-radius: var(--default-border-radius);
    --background-color: color-mix(in srgb, var(--default-color) 10%, transparent);
}

file-pond-entry-list {
    --entry-color: var(--default-color);
    --entry-background-color: var(--default-background-color);
    --entry-shadow: 0 1px 3px rgb(0 0 0 / 0.05);
    --entry-button-outline: 0 0 0 1.5px currentColor;
    --entry-border: 1px solid rgb(from CanvasText r g b / 0.025);

    &[empty] {
        margin-top: calc(-1 * var(--default-padding));
    }

    &::part(list) {
        display: flex;
        flex-direction: column;
        gap: calc(var(--default-padding) * 0.5);
    }

    &::part(entry-list-item) {
    }

    &::part(entry-list-item-placeholder) {
        min-height: 1em;
    }

    &::part(entry-list-item virtualized) {
        background-color: var(--entry-background-color);
        border-radius: var(--entry-border-radius);
    }

    &::part(entry-list-item dragged) {
        --entry-shadow: 0 3px 6px rgb(0 0 0 / 0.25);
    }

    &::part(entry-list-item selected) {
        --entry-overlay-color: rgb(from var(--entry-accent-color) r g b / 0.25);
        --entry-border: 2px solid var(--entry-accent-color);
    }

    &::part(entry-list-item):focus-visible {
        border-radius: var(--entry-border-radius);
        outline: var(--outline);
        outline: none;
    }

    &::part(data-transfer-item) {
        --entry-border-top: 0;
        --entry-border-right: 0;
        --entry-border-bottom: 0;
        --entry-border-left: 0;
        --entry-shadow: none;
    }

    &::part(entry) {
        display: grid;
        grid: min-content minmax(0, 1fr) min-content / min-content minmax(0, 1fr) min-content;
        /* use `minmax(0, 1fr)` instead of `1fr` to prevent media content from expanding the height of the item, mainly an issue with Safari. `min-width:0; min-height:0;` on the `.entry-media` worked on Chrome and Firefox but didn't on Safari.  */
    }

    &::part(entry-load-state) {
        grid-row: 1;
        grid-column: 1;
        padding: var(--entry-padding);
    }

    &::part(entry-checkbox) {
        grid-row: 1;
        grid-column: 1;
        padding: var(--entry-padding);
    }

    &::part(entry-checkbox checked) {
        --input-background-color: var(--entry-accent-color);
    }

    &::part(entry-info) {
        grid-row: 1;
        grid-column: 2;
        padding-top: var(--entry-padding);
        padding-bottom: var(--entry-padding);
    }

    &::part(entry-store-state) {
        grid-row: 1;
        grid-column: 3;
        padding: var(--entry-padding);
    }

    &::part(entry-status) {
        grid-row: 2;
        grid-column: 1 / 4;
    }

    &::part(entry-media) {
        grid-row: 2;
        grid-column: 1 / 4;
    }

    &::part(media-controls) {
        grid-row: 2;
        grid-column: 1 / 4;
        align-self: end;
        color: #fff;
        margin: 0.6125em;

        /* style for buttons in this component */
        --btn-size: 1.25em;
        --btn-icon-stroke: 2.5;
        --btn-icon-size: 0.75em;

        /* panel style in this component */
        --panel-border-radius: 0.25em;
        --panel-border-radius: calc(var(--entry-border-radius) - 0.3125em);
        --panel-background-color: rgb(0 0 0 / 0.35);
        --panel-backdrop-filter: var(--default-backdrop-filter);
    }

    &::part(entry-button) {
        --btn-size: 1.5em;
        --btn-border-radius: calc(var(--entry-border-radius) - var(--entry-padding) * 0.625);
        --btn-background-color: color-mix(in srgb, var(--entry-color) 15%, transparent);
        --btn-icon-stroke: 2.5;

        box-shadow: 0 0 0 0 transparent;
        transition:
            box-shadow var(--_150ms, 0) ease-in-out,
            background-color var(--_150ms, 0) ease-in-out;
    }

    &::part(entry-button-pile) {
        --btn-border-radius: calc(var(--entry-border-radius) - var(--entry-padding) * 0.625);
        --btn-background-color: color-mix(in srgb, var(--entry-color) 15%, transparent);
    }

    &::part(entry-button):not(:disabled):hover {
        background-color: color-mix(in srgb, var(--entry-color) 25%, transparent);
        box-shadow: var(--entry-button-outline);
    }

    &::part(entry-button):focus-visible {
        outline: var(--outline);
    }

    &::part(media-button) {
        --btn-border-radius: var(--panel-border-radius);
        transition:
            box-shadow var(--_150ms, 0) ease-in-out,
            background-color var(--_150ms, 0) ease-in-out;
    }

    &::part(media-button-pile) {
        --btn-border-radius: var(--panel-border-radius);
    }

    &::part(media-button):not(:disabled):hover {
        background-color: color-mix(in srgb, currentColor 15%, transparent);
        box-shadow: var(--entry-button-outline);
    }

    &::part(media-button):focus-visible {
        outline: -webkit-focus-ring-color auto 1px;
        outline: Highlight auto 1px;
    }
}

:host([disabled]) {
    & file-pond-entry-list {
        --entry-overlay-color: rgb(from var(--entry-background-color) r g b / 0.5);
    }

    & button[part='browse-button'] {
        pointer-events: none;
        color: light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
    }
}

/* Entry layout where media underlays controls  
file-pond-entry-list {
    &::part(entry-media) {
        grid-row: 1 / 3;
        grid-column: 1 / 4;
        z-index: -1;
    }

    &::part(media-overlay) {
        z-index: 1;
        mask: linear-gradient(
            #000,
            rgb(0 0 0 / 0.738) 19%,
            rgb(0 0 0 / 0.541) 34%,
            rgb(0 0 0 / 0.382) 47%,
            rgb(0 0 0 / 0.278) 56%,
            rgb(0 0 0 / 0.194) 65%,
            rgb(0 0 0 / 0.126) 73%,
            rgb(0 0 0 / 0.075) 80%,
            rgb(0 0 0 / 0.042) 86%,
            rgb(0 0 0 / 0.021) 91%,
            rgb(0 0 0 / 0.008) 95%,
            rgb(0 0 0 / 0.002) 98%,
            transparent
        );
        max-height: 4em !important;
        --border-radius: 0;
        --background-color: rgb(from var(--media-background-color) r g b / 0.5);
    }

    &::part(entry-button) {
        --btn-backdrop-filter: var(--default-backdrop-filter);
        --btn-background-color: rgb(from var(--media-background-color) r g b / 0.35);
    }

    &::part(entry-button):hover {
        --btn-background-color: rgb(from var(--media-background-color) r g b / 0.25);
    }
}
*/

/* Attribution link */
:host a[part='attribution-link'] {
    --font-size: 0.625;
    --text-opacity: 0.5;
    --line-opacity: 0.2;
    color: rgb(from var(--default-color) r g b / var(--text-opacity));
    font-size: calc(var(--font-size) * 1em);
    text-underline-offset: 1px;
    text-decoration-color: rgb(from var(--default-color) r g b / var(--line-opacity));
    text-transform: lowercase;
    transition: color var(--_150ms) ease-in-out;
    user-select: none;
    &:hover {
        --text-opacity: 0.75;
        --line-opacity: 0.25;
    }
}

:host(:not([nodrop])) a[part='attribution-link'] {
    --inset: calc(var(--default-padding) / var(--font-size));
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    line-height: 2;
    transform: translate(calc(var(--width, 0) * 1px), calc(var(--height, 0) * 1px))
        translateX(calc(-100% - var(--inset)));
}

/* Browse button */
:host(:not([nodrop])) button[part='browse-button'] {
    --width-px: calc(var(--width) * 1px);
    --center-px: calc((var(--width-px) - (2 * var(--default-padding))) * 0.5);
    display: inline-block;
    transform: translateX(calc(var(--center-px) - 50%));
    align-self: flex-start;
    text-align: center;
    padding: var(--default-padding);
    transition: opacity calc(150ms * var(--animate)) ease-in-out;
    background: transparent;
    border: none;
    font-size: 0.875em;

    & u {
        cursor: pointer;
        text-decoration-color: color-mix(in srgb, currentColor 25%, transparent);
    }

    &:focus-visible {
        border-radius: calc(var(--default-border-radius) - var(--default-padding) * 0.75);
        outline: var(--outline);
        outline-offset: calc(-0.875 * var(--default-padding));
    }
}

:host([nodrop]) button[part='browse-button'] {
    align-self: flex-start;
}

